[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/74apps-logo-main1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SplashIntro.gd" type="Script" id=2]
[ext_resource path="res://Assets/74apps_theremin.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SplashIntro" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 650 )
scale = Vector2( 0.15, 0.15 )
z_index = -5
texture = ExtResource( 1 )

[node name="BGPos" type="Node2D" parent="."]
z_index = -10

[node name="BGCol" type="ColorRect" parent="BGPos"]
margin_left = -1109.0
margin_top = -578.0
margin_right = -384.0
margin_bottom = 711.0
rect_scale = Vector2( 4.2086, 2.28922 )
color = Color( 0.0117647, 0.0901961, 0.215686, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true
autostart = true

[node name="Fader" type="ColorRect" parent="."]
margin_left = -762.0
margin_top = -433.0
margin_right = -722.0
margin_bottom = -393.0
rect_scale = Vector2( 53.5507, 64.2918 )
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5

[node name="ThereminIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ThereminTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="ThereminTimer" to="." method="_on_ThereminTimer_timeout"]
